--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 tonic = "0.3"
 prost = "0.6"
 tokio = { version = "0.2", features = ["macros"] }
+reqwest = { version = "0.11", features = ["json"] }
 
 [build-dependencies]
 tonic-build = "0.3"
