--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tonic = "0.3"
 prost = "0.6"
 tokio = { version = "0.2", features = ["macros"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.3"
